<resources>
    <string name="root_AppSelection">Select An App</string>
    <string name="root_globeButton">Geo Data Source</string>
    <string name="root_soccerButton">Soccer match highlights</string>
    <string name="root_songLyrics">Song Lyrics Search</string>
    <string name="root_deezerButton">Deezer song search</string>
    <string name="root_toast_message">App not ready yet, check back later</string>
    <string name="app_name">" CST2335 Project"</string>
    <string name="deezer_searchTitle">Search</string>
    <string name="deezer_searchText">Type an artist name to begin the search</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="nav_header">CST2335 - S20 - Final Project</string>
    <string name="nav_author">Michael Daly</string>
    <string name="nav_version">1.0.0</string>
    <string name="nav_instructions">Instructions for this app</string>
    <string name="nav_about">About the API</string>
    <string name="nav_donate">Donate to Project</string>
    <string name="toolbar_about">About this project</string>
    <string name="nav_instruction_message">Search for an artist to get a list of songs. If you want to track a song select it with a long hold and add to your favorites. To remove it, head to the favorites section and do the same action.</string>
    <string name="toolbar_about_msg">This is the Deezer activity, written by Michael Daly</string>
    <string name="nav_donate_msg">How much money do you want to donate?</string>
    <string name="nav_donate_hint">$$$$</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="nav_header_deezer">Deezer</string>
    <string name="nav_header_app">Application</string>
    <string name="search_hint">Type an artist name and search</string>
    <string name="search_previous">Previous Search</string>
    <string name="results_title">Search Results</string>
    <string name="favourite_deleteheader">Remove Favourite?</string>
    <string name="favourite_deletemsg">Remove</string>
    <string name="favourite_addheader">Add to Favourites?</string>
    <string name="favourite_addmsg">Add</string>
    <string name="favourite_addender">to favourites?</string>
    <string name="results_notfound">No results founds, please return and check your search term</string>
    <string name="favourite_header">Your Favourites</string>
    <string name="favourite_exists">This song has already been added to favourites!</string>
    <string name="favourite_addsuccess">Succesfully added to favourites</string>
    <string name="favourite_deletesuccess">Sucessfully removed from favourites</string>
    <string name="geo_instruction_message">Enter latitude and longitude to find nearby cities. Each result will produce relevant information to the city.</string>
    <string name="geo_headertext">Geo Data Source</string>
    <string name="toolbar_geo_msg">This is the Geo Data Source app. Written by Michael Daly</string>
    <string name="geo_api">https://www.geodatasource.com/web-service</string>
    <string name="lyric_instruction_message">The user can type in an artist or group’s name, followed by the title of one of their songs, and the API will retrieve the lyrics</string>
    <string name="lyric_header">Song Lyrics Search</string>
    <string name="toolbar_lyrics_msg">This is the Song Lyrics Search app. Written by Michael Daly</string>
    <string name="toolbar_soccer_msg">This is the Soccer match highlights app. Written by Michael Daly.</string>
    <string name="soccer_instructions">Retrieve a list of soccer matches that were recently played. Save the details of any match and be able to watch the highlights.</string>
    <string name="soccer_api">https://www.scorebat.com/video-api/</string>
    <string name="soccer_headertext">Soccer match highlights</string>
</resources>