<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/globe"
        android:icon="@drawable/world_small"
        android:orderInCategory="50"
        android:title="@string/root_globeButton"
        app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item
        android:id="@+id/soccer"
        android:icon="@drawable/soccer_small"
        android:orderInCategory="100"
        android:title="@string/root_soccerButton"
        app:showAsAction="always" /> <!-- This uses showAsAction=never, so look at title= parameter -->

    <item
        android:id="@+id/lyric"
        android:icon="@drawable/lyrics_small"
        android:orderInCategory="200"
        android:title="@string/root_songLyrics"
        app:showAsAction="always" />

    <item
        android:id="@+id/about"
        android:orderInCategory="250"
        android:title="@string/toolbar_about"
        app:showAsAction="never" />

</menu>